[package]
name = "timetree-noticebot-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.10", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
